--- a/HackService/HackService.csproj
+++ b/HackService/HackService.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.6.0" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
       <PackageReference Include="WTelegramClient" Version="4.3.5" />
     </ItemGroup>
